--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link rel="manifest" href="/site.webmanifest">
-    <title>HHH2 Map Maker</title>
+    <title>Bali HHH2 Run Map</title>
   </head>
   <body>
     <div id="app"></div>
